<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Word Finder</string>
    <string name="info">Help</string>
    <string name="prefs">Preferences</string>
    <string name="set_preferences">Preferences</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="shuffle">Shuffle</string>
    <string name="show_all">Show All</string>
    <string name="shuffle_confirm_msg">Do you really want to shuffle?</string>
    <string name="shuffle_confirm_title">Please confirm</string>
    <string name="shuffle_ok_text">Shuffle</string>
    <string name="shuffle_cancle_text">Cancel</string>
    <string name="time_up_dialog_msg">Time is up!</string>
    <string name="time_up_dialog_title">Alert</string>
    <string name="time_up_dialog_ok">OK</string>
    <string name="start_game_diag_msg">Start the timer when ready</string>
    <string name="start_game_diag_title">Start Game</string>
    <string name="start_game_diag_ok">Go!</string>
    <string name="GamePreferences">Game Preferences</string>
    <string name="PrefDictionary">Dictionary</string>
    <string name="PrefSelectDict">Select which dictionary to use.\nCurrently: %s</string>
    <string name="PrefScoring">Scoring</string>
    <string name="PrefScoringSummary">Select how the score is calculated\nCurrently: %s</string>
    <string name="PrefAllowThreeLetter">Allow 3-letter words</string>
    <string name="PrefAllowThreeLetterSummary">Check to allow 3 letter words</string>
    <string name="PrefTimer">Time limit enabled</string>
    <string name="PrefTimerSummary">Check to enable time limit</string>
    <string name="PrefTimeLimitSummary">Enter the time limit\nCurrently: %s</string>
    <string name="PrefTimeLimit">Countdown time (mm:ss)</string>
    <string name="OK">OK</string>
    <string name="WordGuessTooShort">is too short</string>
    <string name="WordAlreadyFound">has already been found</string>
    <string name="WordNotInDictionary">is not in the dictionary</string>
    <string name="default_dict">int_english</string>
    <string name="no_internet_connection_available">No internet connection available</string>
    <string name="word_definition_lookup_not_supported_for_this_dictionary">Word definition lookup not supported for this dictionary</string>
    <string name="PrefAutoAddPrefixalWords">Auto add prefixal words</string>
    <string name="PrefAutoAddPrefixalWordsSummary">Check to automatically add prefixal words E.g. \"cats\" will also add \"cat\"</string>
    <string name="press_to_submit_current_word">Press to submit current word guess</string>
    <string name="curtains">Curtains as background</string>
    <string name="definition_not_found_for">Definition not found for: "%1$s"\nUnfortunately, definitions are not available for all words.</string>
    <string name="shuffle_required_diag_msg">New game start required</string>
    <string name="shuffle_required_diag_title">Alert</string>
    <string name="shuffle_required_diag_ok">OK</string>
    <string name="board_unsolvable">Board contains no valid words.</string>
    <string name="unsolvable_confirm_title">Bad Luck!</string>
    <string name="RandomDistribution">Letter Selector</string>
    <string name="PrefRandomDistributionSummary">How the letters are selected.\nCurrently: %s</string>
    <string name="game_won_message">You found all the words</string>
    <string name="game_won_title">You Win!</string>
    <string name="hint">Hint</string>
    <string name="number_of_words_still_to_be_found_by_word_length">Number of words still to be found by word length:</string>
    <string name="word_length">Word length</string>
    <string name="number_of_words">Number of words</string>
    <string name="unavailable_letter_button">Disabled Letter Button %1$s</string>
    <string name="letter_button">Disabled Letter Button %1$s</string>
    <string name="current_guess">Current guess is %1$s</string>
    <string name="current_guess_empty">Current guess is empty</string>
    <string name="error_loading_html_content">Error loading HTML content: %1$s</string>
    <string name="share_challenge">Share challenge</string>
    <string name="challenge_received_title">Challenge received</string>
    <string name="challenge_accept">Accept</string>
    <string name="challenge_decline">Decline</string>
    <string name="challenge_summary">Same board and rules. Can you find more words?</string>
    <string name="sender_time_label">Sender\'s time: %1$s</string>
    <string name="share_challenge_error">Could not create challenge file</string>
    <string name="challenge_parse_error">Failed to parse challenge. The file may be corrupt or from an incompatible version.</string>
    <string name="challenge_parse_error_title">Challenge Error</string>
</resources>
