<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_hint"
        android:enabled="true"
        android:icon="@drawable/lightbulb_2"
        android:title="@string/hint"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_shuffle"
        android:enabled="true"
        android:icon="@drawable/shuffle_button_icon"
        android:title="@string/shuffle"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_info"
        android:enabled="true"
        android:icon="@drawable/help_circle_outline"
        android:title="@string/info"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_prefs"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/cog"
        android:title="@string/prefs"
        android:visible="true"
        app:showAsAction="ifRoom"/>
</menu>
