<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:minHeight="195dp"
        android:minWidth="195dp"
        android:layout_weight="3"
        android:layout_height="0dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            >

            <Button
                android:id="@+id/button01"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button02"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button03"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button04"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            >

            <Button
                android:id="@+id/button11"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button12"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button13"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button14"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            >

            <Button
                android:id="@+id/button21"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button22"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button23"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button24"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            >

            <Button
                android:id="@+id/button31"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button32"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button33"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button34"
                style="?android:attr/buttonBarButtonStyle"
                android:minHeight="48dp"
                android:minWidth="48dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:onClick="letterClick"
                android:text="@string/qu"
                    app:autoSizeTextType="uniform"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <ListView
            android:id="@+id/playerResultsList"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/computerResultsLayout"
            />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/computerResultsLayout"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/playerResultsList"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/showAllRow"
                android:layout_width="fill_parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="solveClick"
                    android:text="@string/show_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ListView
                android:id="@+id/computerResultsList"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableRow
        android:id="@+id/buttonRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="okClick"
            android:text=""
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:layout_width="wrap_content" />

        <TextView
            android:id="@+id/chronometer1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/_00_00" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="20dp" />

        <TextView
            android:id="@+id/scoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textSize="18sp"
            android:paddingRight="10dp"
            tools:ignore="HardcodedText"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/shuffleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="shuffleClick"
            android:text="@string/shuffle"
            android:textSize="18sp"
            android:textStyle="bold" />
    </TableRow>
</LinearLayout>
